fix: 입출력 요구 사항 다시 확인 후 이슈 해결